--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,5 @@
   align-items: center;
   height: 100%;
   width: 100%;
-}
-
-.chart-wrapper {
-  height: 40%;
-  width: 50%;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  background-color: #9ea6d9;
 }
